# NativeInterface

./: README.md
Application/app/: CMakeLists.txt  build.gradle
Application/app/src/androidTest/java/com/example/qustzj/application/: ExampleInstrumentedTest.java
Application/app/src/main/: AndroidManifest.xml
Application/app/src/main/cpp/: LogUtils.h  NativeInterface.cpp  NativeInterface.h  bodymarkdemo.cpp  bodymarkdemo.h  bodymarkparser.cpp  bodymarkparser.h
Application/app/src/main/cpp/TinyXml2/: CMakeLists.txt
Application/app/src/main/java/com/example/qustzj/application/: FileUtil.java  MainActivity.java  NativeInterface.java
Application/app/src/main/res/layout/: activity_main.xml
Application/app/src/test/java/com/example/qustzj/application/: ExampleUnitTest.java
Application/gradle/wrapper/: gradle-wrapper.properties
